--- a/package.json
+++ b/package.json
@@ -8,8 +8,12 @@
     "start": "node p3030-whois.js"
   },
   "dependencies": {
+    "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
-    "express": "^4.21.2"
+    "dotenv": "^17.2.3",
+    "express": "^4.21.2",
+    "jsonwebtoken": "^9.0.2",
+    "mysql2": "^3.15.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.21",
