--- a/.gitignore
+++ b/.gitignore
@@ -3,37 +3,75 @@ node_modules/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+package-lock.json
 
-# Environment variables
+# Environment variables - CRITICAL: Never commit these!
 .env
 .env.local
 .env.*.local
+.env.production
+.env.development
 server/.env
+server/.env.local
+**/.env
 
-# PM2 logs
+# Sensitive configuration files
+config/secrets.js
+config/production.json
+**/secrets.*
+**/credentials.*
+
+# Database backups and exports
+*.sql
+*.sqlite
+*.db
+!server/migrations/*.sql
+
+# PM2 logs and config
 .pm2/
 logs/
 *.log
+ecosystem.config.js.local
 
 # OS files
 .DS_Store
 Thumbs.db
+*.swp
+*.swo
+*~
+.AppleDouble
+.LSOverride
 
 # IDE
 .vscode/
 .idea/
-*.swp
-*.swo
-*~
+*.sublime-project
+*.sublime-workspace
 
 # Build outputs
 public/styles.tailwind.css
 dist/
 build/
+coverage/
 
 # Temporary files
 *.tmp
 *.temp
+*.cache
 
 # Playwright MCP
 .playwright-mcp/
+
+# Security - Key files that should never be committed
+*.pem
+*.key
+*.cert
+*.crt
+*.p12
+id_rsa
+id_rsa.pub
+
+# Backup files
+*.bak
+*.backup
+*~
